[package]
name = "lookaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.2"
thiserror = "1.0.30"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
