[package]
authors = ["Trish"]
categories = ["command-line-utilities"]
description = "Report and find your MAC and IP addresses within LANs"
edition = "2021"
homepage = "https://six-five-six-four.com/git/reactor/lookaround"
keywords = ["address", "discovery", "ip", "network"]
license = "AGPL-3.0"
name = "lookaround"
readme = "README.md"
repository = "https://six-five-six-four.com/git/reactor/lookaround"
version = "0.1.2"

[dependencies]
mac_address = "1.1.2"
rand = "0.8.4"
thiserror = "1.0.30"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
